# TUI-Rust-chat-app

./: Cargo.toml  README.md  Users.db  docker.nix  result  shell.nix
client/: Cargo.toml  Dockerfile
client/src/: main.rs
server/: .schema.sql  Cargo.toml  Dockerfile  Users.db
server/.sqlx/: query-268dab4dc7d79a429ea0cf80a84102321a18e6e9d885413c517979070f2930fc.json  query-80e09e7cef32bae73bb4f9cb78b72567c375fc022c6d4a5659177f2b7dd2fd0b.json
server/src/: main.rs
