[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version="1.0", features=["full"]}
local-ip-address="0.4"
anyhow = { version = "1.0", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tui = "0.19"
crossterm = "0.24"
chrono="0.4"
textwrap="0.16"
