[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio={version="1", features=["full"]}
local-ip-address="0.4"
anyhow = { version = "1.0", default-features = false }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
sqlx = {version ="0.7", features=["runtime-tokio", "sqlite", "macros"]}
once_cell = "1.20"
serde = {version = "1.0", features = ["derive"]}
serde_json="1.0"
